--- a/EmployeeManager_GUI/EMP_FrontEND/EMP_FrontEND/MainWindow.xaml
+++ b/EmployeeManager_GUI/EMP_FrontEND/EMP_FrontEND/MainWindow.xaml
@@ -25,6 +25,7 @@
         <Button Click="Click_Show_Employee" Content="Mitarbeiter Anzeigen"/>
         <Button Click="Click_Delete" Content="Mitarbeiter Löschen"/>
         <Button Click="Click_Save" Content="Speichern"/>
+        <Button Content="Beenden" Click="Button_Click"/>
 
     </StackPanel>
 
