API FIREBASE Connection Functional

--- a/SchoolSecond/Database Web Application/Database Web Application/Views/Default/UserLogin.cshtml
+++ b/SchoolSecond/Database Web Application/Database Web Application/Views/Default/UserLogin.cshtml
@@ -1,8 +1,7 @@
 ﻿@model Database_Web_Application.Models.Users
 
 <head>
-    <link rel="stylesheet" href="~/css/UserLogin.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha384-xxxxxx" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/UserLogin_New.css" />
 
 </head>
 
@@ -22,12 +21,12 @@
 
             <div class="lbl_Username">
                 <input type="text" class="input-field" asp-for="Username" required  />
-                <label>Username</label>
+                <label>E-Mail</label>
             </div>
 
             <div class="lbl_Password">
                 <input type="password" class="input-field" asp-for="Password" required />
-                <label>Password</label>
+                <label>Passwort</label>
             </div>
 
             <div class="button_login">
@@ -37,6 +36,9 @@
         </div>
     </div>
     </form>
+
+
+    <h5 class="Test">TestText</h5>
 
 
 
