--- a/SchoolSecond/Database Web Application/Database Web Application/Views/Default/UserLogin.cshtml
+++ b/SchoolSecond/Database Web Application/Database Web Application/Views/Default/UserLogin.cshtml
@@ -33,12 +33,14 @@
                 <input type="submit" value="Login"/>
             </div>
 
+            <button class="Register">Register</button>
+
         </div>
     </div>
     </form>
 
 
-    <h5 class="Test">TestText</h5>
+
 
 
 
